infra/argocd/patch-service-argocd-server-labels.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  namespace: argocd
  labels:
    dns.service-controller.io/enabled: "true"
    dns.service-controller.io/hostname: argo.ganam.app
    exposure.service-controller.io/type: internal
spec:
  type: ClusterIP
